src/objects/Consolidated_Loan_Info__c.object
<CustomObject>
    <fields>
        <fullName>Interest_Payment__c</fullName>
        <label>Interest Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Balance__c</fullName>
        <label>Loan Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Loan_Payment__c</fullName>
        <label>Loan Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>N_of_opps__c</fullName>
        <label>Number of Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opp_IDs__c</fullName>
        <label>Opportunity IDs</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Principal_Payment__c</fullName>
        <label>Principal Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Consolidated Loan Info</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Year__c</columns>
        <columns>Month__c</columns>
        <columns>N_of_opps__c</columns>
        <columns>Interest_Payment__c</columns>
        <columns>Principal_Payment__c</columns>
        <columns>Loan_Payment__c</columns>
        <columns>Loan_Balance__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Consolidated Loan Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidated Loan Info</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>